--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-﻿/*=============================================================
+/*=============================================================
     Authour URI: www.binarytheme.com
     License: Commons Attribution 3.0
 
@@ -20,6 +20,10 @@ body {
 
 .pad-top {
     padding-top: 100px;
+}
+
+.pad-top-sm {
+    padding-top: 30px;
 }
 
 .head-glow {
